Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -99,9 +99,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "greenville_area = None\n",
-    "\n",
-    "greenville_area # 68"
+    "greenville_area = No\n",
+    "greenville_area # 68\n"
    ]
   },
   {
