--- a/index.ipynb
+++ b/index.ipynb
@@ -138,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_keys = ['68,']\n",
+    "city_keys = ['68',]\n",
     "city_keys # ['Area', 'City', 'Country', 'Population']"
    ]
   },
