--- a/index.ipynb
+++ b/index.ipynb
@@ -147,7 +147,7 @@
     }
    ],
    "source": [
-    "city_keys = ['68','City':'Greenville', 'Country': 'USA', 'Population': 93]\n",
+    "city_keys = \n",
     "city_keys # ['Area', 'City', 'Country', 'Population']"
    ]
   },
