Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -317,7 +317,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "salina = cities\n",
+    "salina = cities[-3]\n",
+    "\n",
     "salina\n",
     "# {'City': 'Salina Island', 'Country': 'Italy', 'Population': 3, 'Area': 26}"
    ]
