--- a/index.ipynb
+++ b/index.ipynb
@@ -343,11 +343,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'City': 'Greenville', 'Country': 'USA', 'Population': 93, 'Area': 68}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "los_cabos_pop = cities [5]\n",
+    "\n",
     "los_cabos_pop # 288"
    ]
   },
