--- a/index.ipynb
+++ b/index.ipynb
@@ -378,7 +378,8 @@
    },
    "outputs": [],
    "source": [
-    "city_count = None\n",
+    "city_count = 12\n",
+    "\n",
     "city_count # 12"
    ]
   },
