Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -418,7 +418,7 @@
     }
    ],
    "source": [
-    "cities[7]['City'] = def\n",
+    "cities[7]['City'] = 'PyeongChang'\n",
     "cities[7]['City'] # 'PyeongChang'"
    ]
   },
