Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -435,7 +435,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyeongchang_values = list(cities[7].)\n",
+    "pyeongchang_values = list(cities[7].values())\n",
+    "\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 44, 1464]"
    ]
